TM-13975 * Fix both issues pointed on ticket.

--- a/web-app/tds/web-app/css/elements/general/grid.sass
+++ b/web-app/tds/web-app/css/elements/general/grid.sass
@@ -21,6 +21,8 @@
     kendo-datepicker
       height: 31px
   .k-grid-content,
+    &.k-virtual-content
+      z-index: 0
   .k-grid-content-locked
     outline: 0px solid transparent
   .k-grid-content .k-grid-table tbody td,
