TM-13284 - Adding Initial License Component

--- a/src/main/webapp/tds/web-app/app-js/shared/modules/header/components/header/header.component.html
+++ b/src/main/webapp/tds/web-app/app-js/shared/modules/header/components/header/header.component.html
@@ -25,12 +25,9 @@
                             <span *ngIf="userContext.bundle">{{userContext.bundle.name}}</span>
                         </a>
                     </li>
-                    <li>
-                        <!--<g:if test="${!isLicenseManagerEnabled}">-->
-                            <!--<tds:licenseWarning />-->
-                        <!--</g:if>-->
+                    <li *ngIf="userContext.licenseEnabled">
+                        <tds-license-warning></tds-license-warning>
                     </li>
-
                     <!-- User Account Menu -->
                     <li class="dropdown user user-menu">
                         <!-- Menu Toggle Button -->
