--- a/src/main/webapp/tds/web-app/css/elements/index.sass
+++ b/src/main/webapp/tds/web-app/css/elements/index.sass
@@ -6,5 +6,6 @@
 @import "component/task-comment-component"
 @import "component/task-comment-dialog.component"
 @import "component/task-detail-component"
+@import "component/license-warning-component"
 
 @import "general/grid"
