--- a/src/main/webapp/tds/web-app/app-js/shared/modules/header/components/tranman-menu/tranman-menu.component.html
+++ b/src/main/webapp/tds/web-app/app-js/shared/modules/header/components/tranman-menu/tranman-menu.component.html
@@ -1,5 +1,5 @@
 <!-- Collect the nav links, forms, and other content for toggling -->
-<div class="collapse navbar-collapse pull-left navbar-ul-container navbar-ul-container-full-menu" id="navbar-collapse">
+<div class="tranman-menu-component collapse navbar-collapse pull-left navbar-ul-container navbar-ul-container-full-menu" id="navbar-collapse">
     <ul class="nav navbar-nav" *ngIf="userContext.project">
         <li *ngIf="hasPermission(permission.AdminMenuView)" class="dropdown menu-parent-admin">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Admin
