--- a/src/main/webapp/tds/web-app/css/elements/index.sass
+++ b/src/main/webapp/tds/web-app/css/elements/index.sass
@@ -7,6 +7,7 @@
 @import "component/task-comment-dialog.component"
 @import "component/task-detail-component"
 @import "component/license-warning-component"
+@import "component/header-component"
 @import "component/tranman-menu-component"
 
 @import "general/grid"
