--- a/web-app/tds/web-app/app-js/modules/dataScript/components/view-edit/data-script-view-edit.component.html
+++ b/web-app/tds/web-app/app-js/modules/dataScript/components/view-edit/data-script-view-edit.component.html
@@ -13,6 +13,8 @@
 						<div class="form-group">
 							<label for="dataScriptProvider" class="col-sm-2 control-label">Provider:
 								<span class="is-required" *ngIf="modalType !== actionTypes.VIEW">*</span>
+							</label>
+							<div class="col-sm-9" *ngIf="modalType !== actionTypes.VIEW">
 								<kendo-dropdownlist *ngIf="providerList && providerList.length > 0"
 													#dataScriptProvider
 													id="dataScriptProvider"
