TM-13284 - Adding space holder for the License Warning Message

--- a/src/main/webapp/tds/web-app/css/base/color.scss
+++ b/src/main/webapp/tds/web-app/css/base/color.scss
@@ -86,3 +86,6 @@ $color-field-orange:#FFC65E;
 $color-field-normal: $color--grey;
 $color-field-unimportant: $color--grey3;
 
+// License Warning
+$warning: #c87f0a;
+$warningLicense: #FFCC00;
