--- a/src/main/webapp/tds/web-app/app-js/shared/modules/header/components/header/header.component.html
+++ b/src/main/webapp/tds/web-app/app-js/shared/modules/header/components/header/header.component.html
@@ -23,7 +23,7 @@
                             <span *ngIf="userContext.bundle">{{userContext.bundle.name}}</span>
                         </a>
                     </li>
-                    <li *ngIf="!userContext.licenseEnabled">
+                    <li *ngIf="userContext.licenseEnabled">
                         <tds-license-warning></tds-license-warning>
                     </li>
                     <!-- User Account Menu -->
