TM-13322 - Addressed all feedback regarding asset comment list

--- a/src/main/webapp/tds/web-app/css/page/index.sass
+++ b/src/main/webapp/tds/web-app/css/page/index.sass
@@ -1,3 +1,4 @@
+@import "module/assetComment/asset-comment-list.component"
 @import "module/assetExplorer/launch-page"
 @import "module/assetExplorer/report-config"
 @import "module/assetExplorer/asset-dependency-component"
