--- a/src/main/webapp/tds/web-app/app-js/shared/modules/header/components/tranman-menu/tranman-menu.component.html
+++ b/src/main/webapp/tds/web-app/app-js/shared/modules/header/components/tranman-menu/tranman-menu.component.html
@@ -13,7 +13,7 @@
                 <li *ngIf="hasPermission(permission.LicenseAdministration)" class="menu-child-item menu-admin-license-admin">
                     <a [routerLink]="['/license','admin','list']">License Admin</a>
                 </li>
-                <li *ngIf="userContext.licenseEnabled" class="menu-child-item menu-admin-license-manager">
+                <li *ngIf="userContext.licenseInfo.license.isManager" class="menu-child-item menu-admin-license-manager">
                     <a [routerLink]="['/license','manager','list']">License Manager</a>
                 </li>
                 <li class="menu-child-item menu-admin-notice-manager">
@@ -22,7 +22,7 @@
                 <li *ngIf="hasPermission(permission.RolePermissionView)" class="menu-child-item menu-admin-role">
                     <a href="/tdstm/permissions/show">Role Permissions</a>
                 </li>
-                <li *ngIf="!userContext.licenseEnabled" class="menu-child-item menu-admin-asset-options">
+                <li *ngIf="!userContext.licenseInfo.license.isManager" class="menu-child-item menu-admin-asset-options">
                     <a href="/tdstm/assetEntity/assetOptions">Asset Options</a>
                 </li>
                 <li *ngIf="hasPermission(permission.HelpMenuView)" class="menu-child-item">
@@ -48,7 +48,7 @@
                 <li *ngIf="hasPermission(permission.HelpMenuView)" class="menu-child-item">
                     <a href="javascript:window.open('https://ops.tdsops.com/twiki/bin/view/Main/DataCenterMoves/TMCreatePerson?cover=print','help');">help</a>
                 </li>
-                <ng-container *ngIf="!userContext.licenseEnabled">
+                <ng-container *ngIf="!userContext.licenseInfo.license.isManager">
                     <li class="divider"></li>
                     <li class="menu-parent-item">Manage Workflows</li>
                     <li class="menu-child-item menu-list-workflows">
@@ -74,7 +74,7 @@
                 </ng-container>
             </ul>
         </li>
-        <ng-container *ngIf="!userContext.licenseEnabled">
+        <ng-container *ngIf="!userContext.licenseInfo.license.isManager">
             <li class="dropdown menu-parent-projects">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Projects
                     <span class="caret"></span>
