TM-14187 - Final change to show the icon only if the status is not valid

--- a/src/main/webapp/tds/web-app/app-js/shared/modules/header/components/header/header.component.html
+++ b/src/main/webapp/tds/web-app/app-js/shared/modules/header/components/header/header.component.html
@@ -23,7 +23,7 @@
                             <span *ngIf="userContext.bundle">{{userContext.bundle.name}}</span>
                         </a>
                     </li>
-                    <li *ngIf="!userContext.licenseInfo.license.isManager">
+                    <li *ngIf="!userContext.licenseInfo.license.isManager && !userContext.licenseInfo.license.isValid">
                         <tds-license-warning></tds-license-warning>
                     </li>
                     <!-- User Account Menu -->
