--- a/web-app/tds/web-app/app-js/modules/importBatch/components/import-assets/import-assets.component.html
+++ b/web-app/tds/web-app/app-js/modules/importBatch/components/import-assets/import-assets.component.html
@@ -126,7 +126,10 @@
                                         [pageSize]="100">
                                     <kendo-grid-column title="Batch Id" field="batchId">
                                         <ng-template kendoGridCellTemplate let-dataItem>
-                                            <a [routerLink]="['/importbatch','list', dataItem.batchId]">{{dataItem.batchId}}</a>
+                                            <a *ngIf="dataItem.batchId; else no_batch_id" [routerLink]="['/importbatch','list', dataItem.batchId]">{{dataItem.batchId}}</a>
+                                            <ng-template #no_batch_id>
+                                                <span>N/A</span>
+                                            </ng-template>
                                         </ng-template>
                                     </kendo-grid-column>
                                     <kendo-grid-column title="Domain" field="domainClass"></kendo-grid-column>
