TM-12020 Fix report style issues

--- a/src/main/webapp/tds/web-app/css/page/index.sass
+++ b/src/main/webapp/tds/web-app/css/page/index.sass
@@ -41,3 +41,4 @@
 @import "module/user/user-edit-person.component"
 @import "module/user/datetime-modal.component"
 @import "module/user/user-manage-staff.component"
+@import "module/reports/pre-event-checklist.component"
