TM-12020 Move style to css file

--- a/src/main/webapp/tds/web-app/css/page/module/reports/pre-event-checklist.component.sass
+++ b/src/main/webapp/tds/web-app/css/page/module/reports/pre-event-checklist.component.sass
@@ -9,6 +9,8 @@
     margin-left: 15px
     padding-top: 10px
     margin-top: 5px
+    .event-selector
+      width: 20%
     .k-dropdown
       span
         background-color: $report-primary-background-color
