TM-13175 - First big chunk of work.

--- a/src/main/webapp/tds/web-app/css/page/index.sass
+++ b/src/main/webapp/tds/web-app/css/page/index.sass
@@ -40,4 +40,5 @@
 @import "module/dependencies/dependencies-view-grid-component"
 @import "module/user/user-edit-person.component"
 @import "module/user/datetime-modal.component"
+@import "module/user/user-dashboard.component"
 @import "module/user/user-manage-staff.component"
